<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.luoboduner.moo.tool</groupId>
    <artifactId>MooTool</artifactId>
    <version>1.4.2</version>
    <packaging>jar</packaging>

    <name>MooTool</name>
    <url>http://www.luoboduner.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <java.version>1.8</java.version>
        <logback.version>1.2.7</logback.version>
        <emoji-java.version>5.1.1</emoji-java.version>
        <hutool-all.version>5.7.17</hutool-all.version>
        <forms_rt.version>7.0.3</forms_rt.version>
        <fastjson.version>1.2.78</fastjson.version>
        <AppleJavaExtensions.version>1.4</AppleJavaExtensions.version>
        <lombok.version>1.18.22</lombok.version>
        <mybatis.version>3.5.8</mybatis.version>
        <sqlite-jdbc.version>3.36.0.3</sqlite-jdbc.version>
        <junit.version>4.13.2</junit.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <guava.version>31.0.1-jre</guava.version>
        <okhttp.version>4.9.3</okhttp.version>
        <google.zxing.core.version>3.4.1</google.zxing.core.version>
        <flatlaf.version>2.0.1</flatlaf.version>
        <flatlaf-extras.version>2.0.1</flatlaf-extras.version>
        <flatlaf-intellij-themes.version>2.0.1</flatlaf-intellij-themes.version>
        <rsyntaxtextarea.version>3.1.5</rsyntaxtextarea.version>
        <sql-formatter.version>2.0.3</sql-formatter.version>
        <google-java-format.version>1.13.0</google-java-format.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>com.vdurmont</groupId>
            <artifactId>emoji-java</artifactId>
            <version>${emoji-java.version}</version>
        </dependency>

        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>${hutool-all.version}</version>
        </dependency>

        <!--GUI Designer -> binary class files-->
        <dependency>
            <groupId>com.intellij</groupId>
            <artifactId>forms_rt</artifactId>
            <version>${forms_rt.version}</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.apple</groupId>
            <artifactId>AppleJavaExtensions</artifactId>
            <version>${AppleJavaExtensions.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>${mybatis.version}</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite-jdbc.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>${google.zxing.core.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>${flatlaf.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>${flatlaf-extras.version}</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-intellij-themes</artifactId>
            <version>${flatlaf-intellij-themes.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fifesoft/rsyntaxtextarea -->
        <dependency>
            <groupId>com.fifesoft</groupId>
            <artifactId>rsyntaxtextarea</artifactId>
            <version>${rsyntaxtextarea.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.vertical-blank</groupId>
            <artifactId>sql-formatter</artifactId>
            <version>${sql-formatter.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.googlejavaformat</groupId>
            <artifactId>google-java-format</artifactId>
            <version>${google-java-format.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>guava</artifactId>
                    <groupId>com.google.guava</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.6.0</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-maven-plugin</artifactId>
                <version>1.3.6</version>
                <configuration>
                    <verbose>true</verbose>
                    <overwrite>true</overwrite>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.6.2</version>
                <configuration>
                    <bundleJre>true</bundleJre>
                    <mainClass>com.luoboduner.moo.tool.App</mainClass>
                    <generateInstaller>true</generateInstaller>
                    <!-- 这行不能被格式化为多行，否则会出错-->
                    <vmArgs>--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</vmArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>bundling-for-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>windows</platform>
                            <createZipball>true</createZipball>
                            <administratorRequired>true</administratorRequired>
                            <winConfig>

                                <!-- general properties -->
                                <generateSetup>true</generateSetup>
                                <generateMsi>true</generateMsi>
                                <generateMsm>true</generateMsm>

                                <!-- setup generation properties -->
                                <setupMode>installForAllUsers</setupMode>
                                <createDesktopIconTask>true</createDesktopIconTask>
                                <disableDirPage>false</disableDirPage>
                                <disableFinishedPage>false</disableFinishedPage>
                                <setupLanguages>
                                    <english>compiler:Default.isl</english>
                                    <!--                                    <spanish>compiler:Languages\Chinese.isl</spanish>-->
                                </setupLanguages>
                            </winConfig>
                        </configuration>
                    </execution>
                    <!--                                        <execution>-->
                    <!--                                            <id>bundling-for-linux</id>-->
                    <!--                                            <phase>package</phase>-->
                    <!--                                            <goals>-->
                    <!--                                                <goal>package</goal>-->
                    <!--                                            </goals>-->
                    <!--                                            <configuration>-->
                    <!--                                                <platform>linux</platform>-->
                    <!--                                                <createTarball>true</createTarball>-->
                    <!--                                            </configuration>-->
                    <!--                                        </execution>-->
                    <!--                                                            <execution>-->
                    <!--                                                                <id>bundling-for-mac</id>-->
                    <!--                                                                <phase>package</phase>-->
                    <!--                                                                <goals>-->
                    <!--                                                                    <goal>package</goal>-->
                    <!--                                                                </goals>-->
                    <!--                                                                <configuration>-->
                    <!--                                                                    <platform>mac</platform>-->
                    <!--                                                                    <createTarball>true</createTarball>-->
                    <!--                    &lt;!&ndash;                                                <jdkPath>X:\\path\to\mac\jdk</jdkPath>&ndash;&gt;-->
                    <!--                                                                </configuration>-->
                    <!--                                                            </execution>-->
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
